<resources>
    <string name="app_name">VKR.Technician</string>
    <string name="authorization">Авторизация</string>

    <!--LABELS-->
    <string name="lbl_shot_hour">ч</string>
    <string name="lbl_shot_minutes">мин</string>
    <string name="lbl_shot_street">ул</string>
    <string name="lbl_shot_home">д</string>
    <string name="lbl_shot_office">оф</string>
    <string name="lbl_error">Ошибка</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_incorrect_data_of_account">Неверный логин или пароль</string>
    <string name="lbl_take_tools">Заберите инструменты</string>
    <string name="lbl_take_akt">Заберите акт</string>
    <string name="lbl_maintenance">Заявка</string>
    <string name="lbl_components">Комплектующие</string>
    <string name="lbl_implements">Инвентарь</string>
    <string name="lbl_type_problem">Тип проблемы</string>
    <string name="lbl_photo">Фото</string>
    <string name="lbl_comment">Комментарий</string>
    <string name="lbl_need_input_type_problem">Выберете тип проблемы</string>
    <string name="lbl_need_input_comment">Введите комментарий</string>
    <string name="lbl_in_shift_state">Вы на смене</string>

    <string name="lbl_work_controller">Менеджер работ</string>
    <string name="lbl_work_controller_description">Предоставляет информацию о статусе работы</string>
    <!--FIELDS-->
    <string name="fld_login">Логин</string>
    <string name="fld_password">Пароль</string>

    <!--BUTTONS-->
    <string name="btn_sing_in">Вход</string>
    <string name="btn_add">Добавить</string>
    <string name="btn_send">Отправить</string>
    <string name="btn_start">Начать</string>
    <string name="btn_show_on_map">Показать на карте</string>
    <string name="btn_message_about_problem">Сообщить о проблеме</string>
    <string name="btn_end">Закончить</string>
    <string name="btn_go_to_current_day">Перейти на текущию смену</string>
    <string name="btn_start_shift">Начать смену</string>

    <!--TITLES-->
    <string name="tlt_plan_jobs">График работ</string>
    <string name="tlt_job">Работа</string>
    <string name="tlt_qr_scanner">QR Code сканер</string>
    <string name="tlt_problem">Проблема</string>

    <string name="map">Карта</string>
    <string name="txt_not_any_maintenance">Нет заявок</string>
    <string name="period_contract">Срок договора</string>
    <string name="contractor">Контрагент</string>
    <string name="lbl_scan_qr_for_start">Отсканируйте QR код объекта, чтобы начать обслуживание</string>
    <string name="btn_scan">Сканировать</string>

    <string-array name="months">
        <item>Января</item>
        <item>Февраля</item>
        <item>Марта</item>
        <item>Апреля</item>
        <item>Мая</item>
        <item>Июня</item>
        <item>Июля</item>
        <item>Августа</item>
        <item>Сентебря</item>
        <item>Октября</item>
        <item>Ноября</item>
        <item>Декабря</item>
    </string-array>

    <string-array name="types_maintenance">
        <item/>
        <item>Ежемесячное ТО</item>
        <item>Разовая</item>
        <item>Внеплановая</item>
        <item>Повторная</item>
    </string-array>

    <string-array name="types_job_state">
        <item/>
        <item>В плане</item>
        <item>В процессе</item>
        <item>Выполнено</item>
        <item>Проблема</item>
    </string-array>

    <string-array name="types_problems">
        <item/>
        <item>Проблема с QR</item>
        <item>Невозможность выполнения</item>
        <item>Необходимость оборудования</item>
        <item>Другое</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
