<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="35dp">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/authorization"
                    android:textSize="@dimen/H5"
                    android:textAlignment="center"
                    android:textColor="@color/black"/>
            <EditText
                    android:id="@+id/fld_username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fld_height"
                    android:inputType="text"
                    android:hint="@string/fld_login"
                    android:layout_marginTop="@dimen/default_margin"
                    tools:ignore="Autofill"/>
            <EditText
                    android:id="@+id/fld_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fld_height"
                    android:inputType="textPassword"
                    android:hint="@string/fld_password"
                    android:layout_marginTop="@dimen/default_margin"
                    tools:ignore="Autofill"/>
            <Button
                    android:id="@+id/btn_sing_in"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fld_height"
                    android:text="@string/btn_sing_in"
                    android:background="@drawable/btn_round_gray"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/default_margin"/>
        </LinearLayout>

        <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>
    </FrameLayout>
</layout>