<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="maintenanceJob" type="com.nstu.technician.domain.model.facility.maintenance.MaintenanceJob"/>
    </data>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/default_radius">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin">
            <TextView
                    android:id="@+id/lbl_job_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/H6"
                    android:textColor="@color/black"
                    android:text="@{maintenanceJob.jobType.name}"
                    android:maxLines="2"
                    android:layout_marginEnd="@dimen/mini_margin"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/status_container"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:ellipsize="end"

                    tools:text="Замена датчика Замена датчика Замена датчика Замена датчика "/>
            <LinearLayout
                    android:id="@+id/status_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="end"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/lbl_job_name"
                    app:layout_constraintHorizontal_bias="1">
                <TextView
                        android:id="@+id/lbl_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:drawableStart="@drawable/ic_time_gray"
                        android:drawablePadding="@dimen/mini_margin"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/lbl_job_name"
                        app:setTimeForJob="@{maintenanceJob.duration}"

                        tools:text="1ч. 20мин."/>

                <TextView
                        android:id="@+id/lbl_job_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="@dimen/mini_margin"
                        app:setTypeStateOfJob="@{maintenanceJob.jobState}"
                        app:layout_constraintTop_toBottomOf="@+id/lbl_duration"

                        tools:text="Не выполнена"/>
            </LinearLayout>

            <TextView
                    android:id="@+id/lbl_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/mini_margin"
                    app:layout_constraintTop_toBottomOf="@+id/lbl_job_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@{maintenanceJob.jobType.description}"
                    tools:text="Описание Описание Описание Описание Описание Описание Описание Описание Описание
                    Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание"
                    app:layout_constraintVertical_bias="0.0"/>

            <Button
                    android:id="@+id/btn_send_about_error"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/fld_height"
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/mini_margin"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_round_black"
                    android:paddingStart="@dimen/default_padding"
                    android:paddingEnd="@dimen/default_padding"
                    android:text="@string/btn_message_about_problem"
                    android:textSize="12sp"
                    android:drawableStart="@drawable/ic_warning_white"
                    android:drawablePadding="@dimen/icon_padding"
                    app:layout_constraintEnd_toStartOf="@id/btn_end_job"
                    app:layout_constraintTop_toBottomOf="@+id/lbl_description"
                    android:visibility="gone"/>
            <Button
                    android:id="@+id/btn_start_job"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_start"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_round_black"
                    android:paddingStart="@dimen/default_padding"
                    android:paddingEnd="@dimen/default_padding"
                    android:layout_marginTop="@dimen/default_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lbl_description"/>
            <Button
                    android:id="@+id/btn_end_job"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_end"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_round_black"
                    android:paddingStart="@dimen/default_padding"
                    android:paddingEnd="@dimen/default_padding"
                    android:layout_marginTop="@dimen/default_margin"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lbl_description"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>